@@ -1,3 +1,8 @@
+1999-08-17  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mime-view.el (mime-preview-original-major-mode): Don't use
+	`get-text-property' at the end of the buffer.
+
 1999-08-02  MORIOKA Tomohiko  <tomo@m17n.org>
 
 	* mime-view.el (mime-preview-follow-current-entity):
